--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "d3": "^5.15.1",
-    "d3-scale": "^3.2.1"
+    "d3-geo": "^1.11.9",
+    "d3-scale": "^3.2.1",
+    "topojson-client": "^3.1.0"
   }
 }
